--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,11 @@ lxml>=4.9.0
 markdown>=3.4.0
 pypdf>=3.16.0
 pillow>=10.0.0
+unstructured>=0.10.0
+unstructured.pytesseract>=0.3.12
+pdf2image>=1.16.3
+pytesseract>=0.3.10
+fastapi>=0.104.1
+cryptography>=41.0.0
+protobuf>=5.26.1
+PyMuPDF>=1.23.0
